# openchimera

./: .gitignore  README.md
module/beamforming/include/common/: FlowInterface.hpp
module/beamforming/include/util/: Factory.hpp  Macro.hpp
module/beamforming/test/test001_GCCPATH_LogWeight/: CMakeLists.txt
module/beamforming/test/test001_GCCPATH_LogWeight/sources/: main.cpp
module/beamforming/test/test001_GCCPATH_LogWeight/sources/SignalAnalysis/PowerSpecturm/: ChannelLogWeight.hpp
module/beamforming/test/test001_GCCPATH_LogWeight/sources/VoiceReader/: reader.cpp  reader.hpp
module/beamforming/test/test002_template_test/: CMakeLists.txt
module/beamforming/test/test002_template_test/sources/: main.cpp  test.cpp  test.hpp
sources/test/python_CI_CD/test_001_code_check/: demo.py  setup.flake8
