CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

IF (NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF(NOT CMAKE_BUILD_TYPE)

PROJECT(TestGPLogW VERSION 1.0.0.1)

ENABLE_LANGUAGE(CXX)

FILE(
    GLOB_RECURSE
    MAIN_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/sources/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/sources/*.cpp
)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/sources
)

LINK_DIRECTORIES(

)

ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SOURCES})

SET_TARGET_PROPERTIES(
    ${PROJECT_NAME}
    PROPERTIES
    SUFFIX ".bm.${CMAKE_BUILD_TYPE}"
    LINKER_LANGUAGE CXX
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
)
